# gitex

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: docker.md
gitex/: __init__.py  dependency_mapper.py  docstring_extractor.py  gitignore.py  main.py  models.py  picker.py  renderer.py  slicer.py  utils.py
gitex/picker/: agentic.py  base.py  questionary.py  textuals.py
scripts/: gitex-docker-wrapper.sh  install-gitex-docker.sh
test/: test_rendered.py
tests/: test_cli.py  test_fences.py  test_render.py  test_skip_binaries.py  test_textual.py  test_tree.py
workflows/: ci.yml
