[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitex"
dynamic = ["version"]
description = "Terminal tool to prep codebases for LLMs"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "zozaai", email = "info@zozaai.com"}
]
license = {text = "MIT"}
dependencies = [
    "click>=8.0,<8.2",
    "textual>=5.2.0",
    "questionary==2.1.0",
    "pathspec>=0.10.1,<1.0",
    "pydantic",
    "GitPython",
]

[project.scripts]
gitex = "gitex.main:cli"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio",
]

[tool.setuptools.dynamic]
version = {attr = "gitex.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"