[metadata]
name = gitex
version = 0.2.0
description = Terminal tool to prep codebases for LLMs
author = Your Name
author_email = you@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    click>=8.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    gitex = gitex.main:cli
