[metadata]
name = gitex
version = 0.2.5
description = Terminal tool to prep codebases for LLMs
author = zozaai
author_email = info@zozaai.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    click>=8.1.0
    textual>=5.2.0
    questionary==2.1.0
    pathspec>=0.10.1,<1.0
    pydantic
    GitPython
python_requires = >=3.8

[options.entry_points]
console_scripts =
    gitex = gitex.main:cli